[project]
name = "daq-tools"
version = "0.2.1"
description = "Async JSONL file ingestor with fan-out to configurable data sinks (MQTT, file, etc.)"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Daniel Boe"}
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiomqtt>=2.5.1",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/advect-technologies/daq-tools"
Repository = "https://github.com/advect-technologies/daq-tools"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["daq_tools*"]
namespaces = false